[tool.poetry]
name = "Tarot" 
version = "0.1.1"          
description = "A simple Python project managed with Poetry"  
authors = ["Krip47 <kripmecnik47@gmail.com>"] 
maintainers = ["I"] 
license = "Apache-2.0 license"            
readme = "README.md"          


keywords = ["Cards", "Tarot", "CardsTarot", "tarot"]


repository = ""


documentation = ""


homepage = "https://github.com/Krip47/CardsTarot"

# Список категорий, к которым относится проект
classifiers = [
    "Development Status :: 4 - Beta",  
    "Intended Audience :: End Users/Desktop",  
    "License :: OSI Approved :: Apache-2.0 license",  
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12", 
    "Topic :: Games/Entertainment",  
    "Topic :: Utilities",             
    "Operating System :: OS Independent", 
]

[tool.poetry.dependencies]
python = "^3.8"       
requests = "^2.28"  


[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
flake8 = "^4.0"
mypy = "^0.910"

[tool.poetry.group.test.dependencies]  
coverage = "^6.0"


[tool.poetry.scripts]
my-script = "CardsTarot.main:code"  


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.plugins."my_plugin"]  
my_entrypoint = {module = "my_poetry_project.plugin"}


[tool.black]         
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.pytest.ini_options] 
addopts = "-v --cov=my_poetry_project"
testpaths = ["tests"]
